tests/ui/suggestions/issue-103112.rs
fn main() {
    std::process::abort!();
    //~^ ERROR: failed to resolve
}
